--- a/app/views/application/_configure.html.haml
+++ b/app/views/application/_configure.html.haml
@@ -16,13 +16,13 @@
       %h4 Master Password
       %p The Master Password is the only password you will need to remember. It is used to decrypt the rest of your individual account passwords. Enter a strong master password below.
       %p.bold It is extremely important that you remember this password as it CANNOT be recovered!
-      %form#configure_form
-        %p= password_field_tag(:old_passwd, '', :placeholder => 'Current Password', :class => 'input-xlarge', :id => 'configure_old_passwd', :style => 'display:none;')
-        %p= password_field_tag(:passwd, '', :placeholder => 'New Password', :class => 'input-xlarge', :id => 'configure_passwd', :required => 'true')
-        %p= password_field_tag(:passwd2, '', :placeholder => 'Confirm New Password', :class => 'input-xlarge', :id => 'configure_passwd2', :required => 'true')
-        %p= submit_tag('Set Password', :class => 'btn btn-primary', :id => 'configure_btn')
-      = form_tag(users_path, :method => :put, :remote => true, :id => 'configure_hidden_form', :style => 'display:none;') do
-        = hidden_field_tag(:api_key, '', :id => 'configure_hidden_api_key')
-        = hidden_field_tag(:new_api_key, '', :id => 'configure_hidden_new_api_key')
-        = hidden_field_tag(:encrypted_data, '', :id => 'configure_hidden_encrypted_data')
-        = hidden_field_tag(:schema_version, '', :id => 'configure_hidden_schema_version')
+      %form#master_password_form
+        %p= password_field_tag(:old_passwd, '', :placeholder => 'Current Password', :class => 'input-xlarge', :id => 'master_password_old_passwd', :style => 'display:none;')
+        %p= password_field_tag(:passwd, '', :placeholder => 'New Password', :class => 'input-xlarge', :id => 'master_password_passwd', :required => 'true')
+        %p= password_field_tag(:passwd2, '', :placeholder => 'Confirm New Password', :class => 'input-xlarge', :id => 'master_password_passwd2', :required => 'true')
+        %p= submit_tag('Set Password', :class => 'btn btn-primary', :id => 'master_password_btn')
+      = form_tag(users_path, :method => :put, :remote => true, :id => 'master_password_hidden_form', :style => 'display:none;') do
+        = hidden_field_tag(:api_key, '', :id => 'master_password_hidden_api_key')
+        = hidden_field_tag(:new_api_key, '', :id => 'master_password_hidden_new_api_key')
+        = hidden_field_tag(:encrypted_data, '', :id => 'master_password_hidden_encrypted_data')
+        = hidden_field_tag(:schema_version, '', :id => 'master_password_hidden_schema_version')
