--- a/app/views/application/_verify.html.haml
+++ b/app/views/application/_verify.html.haml
@@ -9,9 +9,9 @@
     %h2
       Verify
       %small#verify_email_placeholder
-    %p You need to verify your email address to use Passmaster.
+    %p You need to verify your email address to continue.
     .pushed-down
-      %p Enter your verification code below or request a new one.
+      %p Enter the verification code that was emailed to you below or request a new one.
       = form_tag(users_path, :method => :put, :remote => true, :id => 'verify_form') do
         %p= text_field_tag(:verification_code, '', :placeholder => 'Verification Code', :class => 'input-xlarge', :id => 'verify_verification_code', :required => 'true')
         %p= submit_tag('Verify', :class => 'btn btn-primary', :id => 'verify_btn')
