add ability to restore accounts change backup file to include the current schema

--- a/app/assets/stylesheets/configure.css.scss
+++ b/app/assets/stylesheets/configure.css.scss
@@ -4,4 +4,14 @@
   .pushed-down {
     margin-top: 40px;
   }
+
+  #restore_accounts_backup_file {
+    width: 100%;
+    max-width: 270px;
+    line-height: 0;
+  }
+
+  hr {
+    border-bottom: 1px solid #aaa;
+  }
 }
