add url to accounts don't focus account field when editing search url and password fields as well

--- a/app/assets/stylesheets/accounts.css.scss
+++ b/app/assets/stylesheets/accounts.css.scss
@@ -91,7 +91,7 @@
       text-align: right;
       padding-right: 3px;
     }
-    form,input[type='text'],textarea {
+    form,input[type='text'],input[type='url'],textarea {
       margin: 0;
     }
     .form-inline {
