--- a/app/views/application/_accounts.html.haml
+++ b/app/views/application/_accounts.html.haml
@@ -66,6 +66,10 @@
                     %td
                       %input.account.input-block-level{ :type => 'text', :name => 'account', :placeholder => 'Account Name', :required => 'true' }
                   %tr
+                    %td.field-label W:
+                    %td
+                      %input.url.input-block-level{ :type => 'url', :name => 'url', :placeholder => 'Website URL', :autocomplete => 'off', :autocorrect => 'off', :autocapitalize => 'off' }
+                  %tr
                     %td.field-label U:
                     %td
                       %input.username.input-block-level{ :type => 'text', :name => 'username', :placeholder => 'Username', :autocomplete => 'off', :autocorrect => 'off', :autocapitalize => 'off' }
