show total number of accounts split up searchTiles into smaller methods

--- a/app/views/application/_accounts.html.haml
+++ b/app/views/application/_accounts.html.haml
@@ -29,6 +29,8 @@
       %span.num-accounts
         Showing
         %span#num_accounts{ 'data-count' => 0 }
+        of
+        %span#total_accounts{ 'data-count' => 0 }
         Accounts
     #account_tiles
       .account-tile.template.pull-left{ :style => 'display:none;' }
