--- a/app/assets/stylesheets/accounts.css.scss
+++ b/app/assets/stylesheets/accounts.css.scss
@@ -9,6 +9,10 @@
     margin-top: 30px;
   }
 
+  #show_all_tiles_btn {
+    width: 100px;
+  }
+
   span.num-accounts {
     line-height: 14px;
     font-size: 14px;
