don't send encrypted_data to client without an api key only show refresh link when unlocked don't refresh until user types in master password don't save data to localStorage unless verified and confirmed no need to disable refresh button when in read-only mode

--- a/app/views/application/index.html.haml
+++ b/app/views/application/index.html.haml
@@ -1,5 +1,5 @@
 #read_only.alert.alert-error{ :style => 'display:none;' }
-  %strong Connection failed:
+  %strong Connection to server failed:
   Read-only mode enabled.
   = link_to('Try reconnecting...', root_path)
 
