use a gif spinner

--- a/app/views/application/_accounts.html.haml
+++ b/app/views/application/_accounts.html.haml
@@ -3,7 +3,7 @@
     .pull-left
       %button.btn.btn-warning{ :type => 'button', 'data-wipe-data' => 'true' } Wipe Data
     .pull-right
-      %span#refresh_spinner{ :style => 'display:none;' } Loading...
+      %img#refresh_spinner{ :src => '/img/spinner.gif', :style => 'display:none;' }
       = link_to(users_path, :remote => true, :id => 'refresh_link', :class => 'btn', :title => 'Refresh') do
         %i.icon-refresh
       %button#configure_btn.btn{ :type => 'button', :title => 'Configure', :style => 'display:none;' }
