add lock button

--- a/app/views/application/_accounts.html.haml
+++ b/app/views/application/_accounts.html.haml
@@ -8,6 +8,8 @@
         %i.icon-refresh
       %button#configure_btn.btn{ :type => 'button', :title => 'Configure', :style => 'display:none;' }
         %i.icon-cog
+      %button#lock_btn.btn{ :type => 'button', :title => 'Lock', :style => 'display:none;' }
+        %i.icon-lock
     .clearfix
 
   .well
