--- a/app/views/application/_configure.html.haml
+++ b/app/views/application/_configure.html.haml
@@ -1,7 +1,7 @@
 #configure.container{ :style => 'display:none;' }
   .top-links
     .pull-left
-      %button.btn.btn-warning{ :type => 'button', 'data-wipe-data' => 'true' } Wipe Data
+      %button.btn.btn-warning{ :type => 'button', 'data-logout' => 'true' } Logout
     .pull-right
       %button#configure_cancel_btn.btn{ :type => 'button' } Cancel
     .clearfix
