--- a/app/views/application/_accounts.html.haml
+++ b/app/views/application/_accounts.html.haml
@@ -27,7 +27,7 @@
     %p
       %button#add_account_btn.btn.btn-success{ :type => 'button' } Add Account
     %p
-      = text_field_tag(:search, '', :placeholder => 'Search', :autocomplete => 'off', :autocorrect => 'off', :autocapitalize => 'off', :class => 'input-medium', :id => 'accounts_list_search')
+      = text_field_tag(:search, '', :placeholder => 'Type to Search', :autocomplete => 'off', :autocorrect => 'off', :autocapitalize => 'off', :class => 'input-medium', :id => 'accounts_list_search')
       %button#show_all_tiles_btn.btn{ :type => 'button' } Show All
     %p
       %span.num-accounts
