--- a/app/views/application/_configure.html.haml
+++ b/app/views/application/_configure.html.haml
@@ -32,7 +32,7 @@
       #backup_accounts.pushed-down
         %hr
         %h4 Backup Accounts
-        %p Use the button below to backup your encrypted accounts database to a file on your computer. You'll eventually be able to restore your accounts from that file if necessary.
+        %p Use the button below to backup your encrypted accounts database to a file on your computer. You can then restore your accounts from that file if necessary.
         .alert.alert-info
           %strong Note:
           Backups are locked with your current Master Password and you will need the password in order to restore the backup.
