added ability to change email fixed several validation bugs lot of improvements to User model don't allow backups without an api key

--- a/app/views/application/_accounts.html.haml
+++ b/app/views/application/_accounts.html.haml
@@ -17,7 +17,14 @@
       Accounts
       %small#accounts_email_placeholder
 
-    #unlock_accounts{ :style => 'display:none;' }
+    #verify_email_notice.pushed-down{ :style => 'display:none;' }
+      .alert.alert-info
+        You need to
+        %strong
+          %a{ :href => '#' } Verify Your Email Address
+        to make changes to your accounts.
+
+    #unlock_accounts.pushed-down{ :style => 'display:none;' }
       %p Accounts are locked. Enter the Master Password to unlock.
       %form#unlock_accounts_form
         %p= password_field_tag(:passwd, '', :placeholder => 'Master Password', :class => 'input-xlarge', :id => 'unlock_accounts_passwd', :required => 'true')
