--- a/app/views/application/_verify.html.haml
+++ b/app/views/application/_verify.html.haml
@@ -2,6 +2,8 @@
   .top-links
     .pull-left
       %button.btn.btn-warning{ :type => 'button', 'data-logout' => 'true' } Logout
+    .pull-right
+      %button#verify_cancel_btn.btn{ :type => 'button' } Cancel
     .clearfix
 
   .well
