better email text master password notification change notification framework

--- a/app/views/mailer/email_changed.html.haml
+++ b/app/views/mailer/email_changed.html.haml
@@ -1,7 +1,5 @@
 %p Hi,
 
-%p
-  Thanks for using Passmaster! This is to confirm that you just switched your email address.
-  You'll need to use your new address to access your accounts from now on.
+%p This is to confirm that you changed your email address. You'll need to use your new address to access your accounts from now on.
 
-%p Thanks!
+%p Thanks for using Passmaster!
