--- a/app/views/mailer/verify_email.html.haml
+++ b/app/views/mailer/verify_email.html.haml
@@ -1,6 +1,6 @@
 %p Hi,
 
-%p Thanks for using Passmaster! You'll need to verify your email address to use your account.
+%p You'll need to verify your email address to use your account.
 
 %p
   Just click the link below or enter the verification code when you
@@ -13,4 +13,4 @@
 
 %p= link_to(@verification_url, @verification_url)
 
-%p Thanks!
+%p Thanks for using Passmaster!
