--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -3,7 +3,7 @@
 %html{ :manifest => '/application.manifest' }
   %head
     %meta{ 'http-equiv' => 'Content-Type', :content => 'text/html; charset=utf-8' }
-    %meta{ :name => 'viewport', :content => 'width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no' }
+    %meta{ :name => 'viewport', :content => 'initial-scale=1.0, maximum-scale=1.0, user-scalable=no' }
     %meta{ :name => 'apple-mobile-web-app-capable', :content => 'yes' }
     %meta{ :name => 'csrf-param', :content => request_forgery_protection_token }
     %meta{ :name => 'csrf-token' }
