include an accounts backup in the emails sent when a user's master password or email address changes

--- a/app/views/mailer/email_changed.html.haml
+++ b/app/views/mailer/email_changed.html.haml
@@ -2,4 +2,6 @@
 
 %p This is to confirm that you changed your email address. You'll need to use your new address to access your accounts from now on.
 
+%p A backup of your accounts at the time of change is attached to this message.
+
 %p Thanks for using Passmaster!
