--- a/app/views/mailer/master_password_changed.html.haml
+++ b/app/views/mailer/master_password_changed.html.haml
@@ -2,4 +2,6 @@
 
 %p This is to confirm that you changed your Master Password. You'll need to use your new password to access your accounts from now on.
 
+%p A backup of your accounts as they existed with the previous Master Password is attached to this message.
+
 %p Thanks for using Passmaster!
