show an update message when the app cache has been updated disable the preferences form during read-only mode

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -26,6 +26,6 @@ input.placeholder, textarea.placeholder {
   color: #aaa;
 }
 
-#read_only, #idle_timeout {
+#alert_messages {
   text-align: center;
 }
