--- a/app/views/application/index.html.haml
+++ b/app/views/application/index.html.haml
@@ -1,12 +1,17 @@
-.container
+#alert_messages.container
   #read_only.alert.alert-error{ :style => 'display:none;' }
     %strong Connection to server failed:
     Read-only mode enabled.
-    %a#reconnect_link{ :href => '#' } Try reconnecting...
+    %a.reload-link{ :href => '#' } Try reconnecting...
 
   #idle_timeout.alert.alert-info{ :style => 'display:none;' }
     %strong Idle Alert!
     Accounts will automatically lock in one minute due to inactivity.
+
+  #cache_update_ready.alert.alert-info{ :style => 'display:none;' }
+    %strong New Updates Available!
+    %a.reload-link{ :href => '#' } Reload
+    the page to start using the latest version.
 
 = render 'overview'
 = render 'verify'
