show qr code for google authenticator remove html5 shiv stuff for IE cause i'm not using it

--- a/app/assets/stylesheets/configure.css.scss
+++ b/app/assets/stylesheets/configure.css.scss
@@ -19,7 +19,7 @@
     #preferences_mfa {
       margin: 0;
     }
-    span.mfa-status {
+    #mfa-status {
       margin-left: 5px;
     }
     span.mfa-enabled {
