--- a/app/views/application/_configure.html.haml
+++ b/app/views/application/_configure.html.haml
@@ -67,7 +67,11 @@
             = label_tag(:otp_enabled, 'Multi-factor Authentication')
             = hidden_field_tag(:otp_enabled, '0', :id => 'preferences_hidden_mfa')
             = check_box_tag(:otp_enabled, '1', false, :id => 'preferences_mfa')
-            %span.mfa-status
+            %span#mfa-status
+            #mfa_configure{ :style => 'display:none;' }
+              %p Use the following QR code or key to add Passmaster to Google Authenticator.
+              #qr_code
+              %strong#otp_secret
           %p= submit_tag('Save Preferences', :class => 'btn btn-primary', :id => 'preferences_btn')
 
       #backup_accounts.pushed-down
