--- a/app/views/application/_configure.html.haml
+++ b/app/views/application/_configure.html.haml
@@ -47,18 +47,21 @@
         %h4 Preferences
         = form_tag(users_path, :method => :put, :remote => true, :id => 'preferences_form') do
           = hidden_field_tag(:api_key, '', :id => 'preferences_api_key')
+          %strong Default Password Length
           %p
-            = label_tag(:password_length, 'Default Password Length')
             %select#preferences_password_length.input-medium{ :name => 'password_length' }
               - 6.upto(32).each do |i|
                 %option{ :class => "length-#{i}", :value => i }= "#{i} Characters"
+          %strong Special Characters
+          %p.inline-checkboxes
+            = label_tag(nil, :class => 'radio inline') do
+              = radio_button_tag(:special_chars, '1', false, :id => 'preferences_special_chars_enabled')
+              Include
+            = label_tag(nil, :class => 'radio inline') do
+              = radio_button_tag(:special_chars, '0', false, :id => 'preferences_special_chars_disabled')
+              Don't Include
+          %strong Auto-lock
           %p
-            = label_tag(:special_chars, 'Special Characters')
-            = hidden_field_tag(:special_chars, '0', :id => 'preferences_hidden_special_chars')
-            = check_box_tag(:special_chars, '1', false, :id => 'preferences_special_chars')
-            %span#special_chars_status
-          %p
-            = label_tag(:idle_timeout, 'Auto-lock')
             %select#preferences_idle_timeout.input-medium{ :name => 'idle_timeout' }
               %option{ :value => 0 } Never
               %option{ :value => 1 } 1 Minute
@@ -68,18 +71,24 @@
                 - val = i * 5
                 %option{ :value => val }= "#{val} Minutes"
               %option{ :value => 60 } 1 Hour
-          %p
-            = label_tag(:auto_backup, 'Auto-backup on Change')
-            = hidden_field_tag(:auto_backup, '0', :id => 'preferences_hidden_auto_backup')
-            = check_box_tag(:auto_backup, '1', false, :id => 'preferences_auto_backup')
-            %span#auto_backup_status
-          %p
-            = label_tag(:otp_enabled, 'Multi-factor Authentication')
-            = hidden_field_tag(:otp_enabled, '0', :id => 'preferences_hidden_mfa')
-            = check_box_tag(:otp_enabled, '1', false, :id => 'preferences_mfa')
-            %span#mfa_status
+          %strong Auto-backup on Change
+          %p.inline-checkboxes
+            = label_tag(nil, :class => 'radio inline') do
+              = radio_button_tag(:auto_backup, '1', false, :id => 'preferences_auto_backup_enabled')
+              Enabled
+            = label_tag(nil, :class => 'radio inline') do
+              = radio_button_tag(:auto_backup, '0', false, :id => 'preferences_auto_backup_disabled')
+              Disabled
+          %strong Multi-factor Authentication
+          %p.inline-checkboxes
+            = label_tag(nil, :class => 'radio inline') do
+              = radio_button_tag(:otp_enabled, '1', false, :id => 'preferences_mfa_enabled')
+              Enabled
+            = label_tag(nil, :class => 'radio inline') do
+              = radio_button_tag(:otp_enabled, '0', false, :id => 'preferences_mfa_disabled')
+              Disabled
             #mfa_configure{ :style => 'display:none;' }
-              %p Use the following QR code or Secret Key to add Passmaster to Google Authenticator. It is a good idea to save the Secret Key in a safe location in case you lose your phone as it will be necessary to regain access to your accounts.
+              %p Use the following QR code or secret key to add Passmaster to Google Authenticator. It is a good idea to save the secret key in a safe location in case you lose your phone as it will be necessary to regain access to your accounts.
               #qr_code
               %strong Secret Key:
               %strong#otp_secret
