read-only -> offline-mode

--- a/app/views/application/index.html.haml
+++ b/app/views/application/index.html.haml
@@ -1,7 +1,7 @@
 #alert_messages.container
-  #read_only.alert.alert-error{ :style => 'display:none;' }
+  #offline_mode.alert.alert-error{ :style => 'display:none;' }
     %strong Connection to server failed:
-    Read-only mode enabled.
+    Offline mode enabled.
     %a.reload-link{ :href => '#' } Try reconnecting...
 
   #idle_timeout.alert.alert-info{ :style => 'display:none;' }
