--- a/app/views/application/_overview.html.haml
+++ b/app/views/application/_overview.html.haml
@@ -6,5 +6,5 @@
     .pushed-down
       %p Enter your email address to access your accounts or to get started.
       = form_tag(users_path, :remote => true, :id => 'overview_form') do
-        %p= email_field_tag(:email, '', :placeholder => 'Email Address', :class => 'input-xlarge', :id => 'overview_email', :required => 'true')
+        %p= email_field_tag(:email, '', :placeholder => 'Email Address', :class => 'input-xlarge', :id => 'overview_email', :required => true)
         %p= submit_tag('Access Accounts', :class => 'btn btn-primary', :id => 'overview_btn')
